--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,10 +59,10 @@ ROOT_GENERATE_DICTIONARY(G__t576 ${HEADER_FILES} LINKDEF ${T576_INCLUDE_DIR}/../
 
 add_library(t576 SHARED ${SOURCE_FILES} G__t576.cxx)
 add_executable(loadEvents ${PROJECT_SOURCE_DIR}/example/loadEvents.cc)
-target_link_libraries(loadEvents ${ROOT_LIBRARIES} t576)
+target_link_libraries(loadEvents ${ROOT_LIBRARIES} t576 cnpy)
 
 
-target_link_libraries(t576 ${ROOT_LIBRARIES} CLHEP::Vector)
+target_link_libraries(t576 ${ROOT_LIBRARIES} CLHEP::Vector cnpy)
 #target_link_libraries(test ${ROOT_LIBRARIES} t576)
 
 #----------------------------------------------------------------------------
@@ -76,9 +76,9 @@ install (FILES ${PROJECT_SOURCE_DIR}/share/runLog.root DESTINATION ${T576_INSTAL
 
 install (FILES ${PROJECT_BINARY_DIR}/libt576_rdict.pcm DESTINATION ${LIB_INSTALL_DIR})
 install (TARGETS t576 LIBRARY DESTINATION ${LIB_INSTALL_DIR})
-
-
 install(TARGETS loadEvents DESTINATION ${T576_INSTALL_DIR}/share/t576)
+
+
 
 
 
