include building of examples in cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,9 +59,10 @@ ROOT_GENERATE_DICTIONARY(G__t576 ${HEADER_FILES} LINKDEF ${T576_INCLUDE_DIR}/../
 
 add_library(t576 SHARED ${SOURCE_FILES} G__t576.cxx)
 
+
 target_link_libraries(t576 ${ROOT_LIBRARIES} CLHEP::Vector ${ZLIB_LIBRARIES})# cnpy)
-
-
+add_executable(svdExample ${PROJECT_SOURCE_DIR}/example/svdExample.cc)
+target_link_libraries(svdExample t576)
 #----------------------------------------------------------------------------
 
 
@@ -72,7 +73,7 @@ install (FILES ${PROJECT_SOURCE_DIR}/share/runLog.root DESTINATION ${T576_INSTAL
 
 install (FILES ${PROJECT_BINARY_DIR}/libt576_rdict.pcm DESTINATION ${LIB_INSTALL_DIR})
 install (TARGETS t576 LIBRARY DESTINATION ${LIB_INSTALL_DIR})
-#install(TARGETS loadEvents DESTINATION ${T576_INSTALL_DIR}/share/t576)
+install(TARGETS svdExample DESTINATION ${T576_INSTALL_DIR}/share/t576/example)
 
 
 
