removed CLHEP dependency, switched to internal ROOT vector classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ project(t576)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 unset(CMAKE_MODULE_PATH)
-#use the CLHEP things
-#will generate a bunch of library modules CLHEP::stuff that can be linked to
-find_package(CLHEP REQUIRED)
+
+
+
 find_package(ZLIB REQUIRED)
 
 
@@ -23,7 +23,7 @@ find_package(ZLIB REQUIRED)
 #find_package(GSL REQUIRED)
 #use the ROOT things
 list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
-#list(APPEND CMAKE_PREFIX_PATH $ENV{CLHEP_ROOT_DIR})
+
 find_package(ROOT REQUIRED COMPONENTS RIO Tree MathMore)
 include(${ROOT_USE_FILE})
 #add_definitions(${ROOT_CXX_FLAGS})
@@ -43,13 +43,17 @@ else()
 endif()
 
 
-include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include ${CLHEP_INCLUDE_DIR} ${ZLIB_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS} ${T576_INCLUDE_DIR} ${T576_INCLUDE_DIR}/../)
+
+
+include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include ${ZLIB_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS} ${T576_INCLUDE_DIR} ${T576_INCLUDE_DIR}/../)
 
 #----------------------------------------------------------------------------
 
 
-file(GLOB SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/*.cc ${PROJECT_SOURCE_DIR}/src/*.cpp ${CLHEP_INCLUDE_DIR}/Vector/*.icc ${CLHEP_INCLUDE_DIR}/Units/*.icc)
-file(GLOB HEADER_FILES ${T576_INCLUDE_DIR}/*.h ${T576_INCLUDE_DIR}/*.hh ${CLHEP_INCLUDE_DIR}/Vector/*.h ${CLHEP_INCLUDE_DIR}/Units/*.h)# ${GSL_INCLUDE_DIRS}/gsl/*.h)
+
+
+file(GLOB SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/*.cc ${PROJECT_SOURCE_DIR}/src/*.cpp )
+file(GLOB HEADER_FILES ${T576_INCLUDE_DIR}/*.h ${T576_INCLUDE_DIR}/*.hh)# ${GSL_INCLUDE_DIRS}/gsl/*.h)
 
 
 #make the ROOT dictionaries and shared object library for reading the event tree
@@ -60,7 +64,7 @@ ROOT_GENERATE_DICTIONARY(G__t576 ${HEADER_FILES} LINKDEF ${T576_INCLUDE_DIR}/../
 add_library(t576 SHARED ${SOURCE_FILES} G__t576.cxx)
 
 
-target_link_libraries(t576 ${ROOT_LIBRARIES} CLHEP::Vector ${ZLIB_LIBRARIES})# cnpy)
+target_link_libraries(t576 ${ROOT_LIBRARIES} ${ZLIB_LIBRARIES})# cnpy)
 add_executable(svdExample ${PROJECT_SOURCE_DIR}/example/svdExample.cc)
 target_link_libraries(svdExample t576)
 #----------------------------------------------------------------------------
